<resources>
    <string name="app_name">Visiting Card</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_description">An Android application that helps to virtually exchange digital visiting cards while attending meetups and conferences.</string>
    <string name="developers">Developers</string>
    <string name="developed_by">Developed by</string>
    <string name="title_activity_developers_about">Developers</string>
    <string name="licenses"><u>License Info</u></string>
    <string name="contibutors">Contibutors</string>
    <string name="jboss_website_link"><u>http://www.jboss.org/</u></string>
    <string name="jboss_org_description">JBoss Community is a community of open source projects. The community hosts a large number of projects that are written in various programming languages. The primary language is Java. But there are also projects that are written in Ruby, PHP, Node and other languages.</string>
    <string name="ok">OK</string>

</resources>
